<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/bg_white"
    tools:context=".Registrasi">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen72"
        android:src="@mipmap/ic_header"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_header_back"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/dimen12"
        android:textSize="@dimen/dimen32"
        android:layout_toRightOf="@id/back"/>


</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen20"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingVertical="@dimen/dimen20" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/dimen15" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/dimen15" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/dimen15">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/male"
                android:textColor="@color/colorFontDesc" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textColor="@color/colorFontDesc" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:theme="@style/bg_white">

            <Spinner
                android:id="@+id/spinner_blood_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen40"
                android:layout_weight="1"
                android:entries="@array/blood_type" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen40"
                android:layout_weight="1"
                android:entries="@array/reshus" />
        </LinearLayout>

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingVertical="@dimen/dimen15" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:paddingVertical="@dimen/dimen15" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen40"
                android:layout_weight="1"
                android:text="@string/personal"
                android:textColor="@color/colorFontDesc"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen40"
                android:layout_weight="1"
                android:textColor="@color/colorFontDesc"
                android:text="@string/organization" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen20"/>

        <EditText
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen15"
            android:hint="@string/home_addess" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen15"
            android:hint="@string/default_location"
            android:drawableRight="@mipmap/ic_blood_needed_location"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen20"
            android:textColor="@color/colorFontDesc"
            android:text="@string/agree_whith_terms_and_conditions" />

        <Button
            android:background="@drawable/btn_grey"
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLightBlue"
            android:text="@string/register" />

    </LinearLayout>

</LinearLayout>