<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/bg_blue"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen20"
        android:layout_marginTop="@dimen/dimen100"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_welcome_logo" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen30"
            android:inputType="textPersonName"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen15"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15"
            android:background="@drawable/btn_lightblue"
            android:textAllCaps="true"
            android:text="@string/login"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:text="or"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:background="@drawable/btn_lightblue"
            android:paddingLeft="@dimen/dimen30"
            android:drawableLeft="@mipmap/ic_welcome_fb_login"
            android:textAllCaps="true"
            android:text="connect with facebook"
            android:textColor="@color/colorWhite"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/not_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doesn_t_have_account" />

            <TextView
                android:id="@+id/registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen3"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>